--- a/sites/all/themes/openscholar/scholar_base/css/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/css/scholar-base.css
@@ -7,10 +7,12 @@ body {
   background: #FFF;
   }
 
+ /* Firebug bug */
+ /*
 body.admin-menu {
-  /* Firebug bug */
   position:static !important;
   }
+*/
 
 #tinymce {
   background: #fff !important;
