--- a/sites/all/themes/openscholar/scholar_eloquent/css/scholar-eloquent.css
+++ b/sites/all/themes/openscholar/scholar_eloquent/css/scholar-eloquent.css
@@ -29,11 +29,11 @@ a:hover {
 
 h1, h2, h3, #header {
     color:#484b63;
-    font-weight: bold;
+    font-weight: normal;
     }
 
 h2 {
-    font-size: 1.7em;
+    font-size: 20px;
     }
 
 h1 a, h2 a, h3 a, #sidebar-second a {
@@ -51,6 +51,11 @@ h1 a, h2 a, h3 a, #sidebar-second a {
 
 img {
   border: 1px solid #444;
+  }
+
+#scholar-shield {
+  width: 65px;
+  margin-top:20px;
   }
 
 #scholar-shield img {
@@ -131,13 +136,14 @@ body.no-sidebars #content-wrapper {
 #header h1 {
   margin-top: 16px;
   margin-bottom: 0;
-  font-size: 27px;
+  font-size: 25px;
   text-shadow: #222 0 0 .4em;
   color: #F7F3EA;
+  font-weight: bold;
   }
 
 #header h2 {
-  font-size:20px;
+  font-size:18px;
   }
 
 #header a, #header a:visited,#header h2, #header p {
@@ -152,7 +158,6 @@ body.no-sidebars #content-wrapper {
 #header-main .content {
   margin-left: 12px;
   }
-
 
 #logo img {
   width: 160px;
