--- a/sites/all/themes/openscholar/scholar_nortony/scholar-nortony.css
+++ b/sites/all/themes/openscholar/scholar_nortony/scholar-nortony.css
@@ -6,14 +6,11 @@
 
 body, #header, #footer, #wrapper {
     background: #2f341f;
+    color:#37352B;
+    font-family: georgia, serif;
     }
 
 /* TYPOGRAPHY*/
-
-body {
-  color:#37352B;
-  font-family: georgia, serif;
-  }
 
 a, a:visited {
     color:#a3a18c;
@@ -54,7 +51,7 @@ h2.title {
   }
 
 #sidebar-second li a, #sidebar-first li a {
-  color: #aaa;
+  color: #bbb;
   font-weight:normal;
   }
 
@@ -89,9 +86,13 @@ p.copy {
   padding-right: 250px;
   }
 
+body.sidebar-second #content-wrapper {
+  padding-left:10px;
+  }
+
 #footer {
   padding-top: 14px;
-  padding-bottom: 14px;
+  padding-bottom: 45px;
    }
 
 body.sidebar-first #container {
@@ -229,8 +230,9 @@ body.header-main #header-main, body.header-main-right #header-main {
   height: 74px;
   }
 
-#scholar-shield img {
-  height: 59px;
+#scholar-shield {
+  width: 55px;
+  margin-right:0;
   }
 
 /* MAIN CONTENT AREA */
