--- a/sites/all/themes/openscholar/scholar_stripy/scholar-stripy.css
+++ b/sites/all/themes/openscholar/scholar_stripy/scholar-stripy.css
@@ -91,11 +91,11 @@ body.sidebar-first #content-wrapper, body.header-left-main #header-wrapper {
   }
 
 #sidebar-second {
-    border-left: 1px solid #dec6bd;
+    border-left: 1px solid #ccc;
     }
 
 #sidebar-first {
-    border-right: 1px solid #dec6bd;
+    border-right: 1px solid #ccc;
     }
 
 body.two-sidebars #sidebar-first {
@@ -106,8 +106,6 @@ body.two-sidebars #sidebar-first {
     text-align: center;
     font-size: .9em;
     }
-
-
 
 
 /* HEADER ELEMENTS */
@@ -124,11 +122,11 @@ body.navbar-off #header {
   }
 
 #header-wrapper {
-    height: 140px;
+    height: 160px;
     }
 
 #header h1 {
-    font-size: 3em;
+    font-size: 31px;
     line-height: 1em;
     }
 
@@ -152,7 +150,6 @@ body.navbar-off #header {
 #navbar {
   height: 40px;
   line-height: 40px;
-  padding-top: 20px;
   }
 
 #navbar li {
