--- a/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
+++ b/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
@@ -82,6 +82,7 @@
     line-height: normal;
     margin-bottom:10px;
     font-size: 13px;
+    font-weight: normal;
     }
 
 .page-home #block-iqss_gking-areas_of_research #methods dt span,
