--- a/sites/all/themes/openscholar/scholar_bigpic/scholar-bigpic.css
+++ b/sites/all/themes/openscholar/scholar_bigpic/scholar-bigpic.css
@@ -1,5 +1,5 @@
 body {
-  background: url(images/background03.jpg);
+  background: url('images/background03.jpg') 50% 0 repeat;
   color: #050505;
   }
 
@@ -22,12 +22,12 @@ a:hover {
 
 #header h1 {
   font-size: 23px;
-  margin: 0 0 5px 0;
+  margin: 0;
   }
 
 #header h2 {
-  font-size: 19px;
-  margin: 0 0 2px 0;
+  font-size: 17px;
+  margin: 0;
   }
 
 #header p {
@@ -152,9 +152,13 @@ a:hover {
   padding-right: 88px;
   }
 
+#scholar-shield {
+  width: 55px;
+  }
+
 .navbar-on #header-wrapper {
   float: left;
-  width: 376px;
+  width: 473px;
   }
 
 #navbar {
@@ -169,7 +173,7 @@ a:hover {
 
 #navbar li {
   display: inline;
-  margin-right: 16px;
+  margin-left: 16px;
   display:inline;
   font-size: .9em;
   line-height: 1.5em;
