--- a/sites/all/themes/openscholar/scholar_density/scholar-density.css
+++ b/sites/all/themes/openscholar/scholar_density/scholar-density.css
@@ -2,10 +2,6 @@ html,body {
   height: 100%;
   }
 
-body {
-  font-family:"helvetica neue",helvetica, Arial,sans-serif;
-  }
-
 #content a, #content a:visited {
   color:#2089ac;
   }
@@ -17,7 +13,7 @@ body {
 
 #header h1 {
   font-size: 20px;
-  margin: 17px 10px 0 0;
+  margin: 17px 10px 4px 0;
   }
 
 #header a {
@@ -38,17 +34,18 @@ body {
   }
 
 #header h2 {
-  font-size: 12px;
+  font-size: 13px;
+  line-height: 15px;
   margin: 0 10px 3px 0;
   }
 
 h2.title {
   margin-bottom: 1em;
-  font-size: 1.2em;
+  font-size: 18px;
   }
 
 h3 {
-  font-size: 1em;
+  font-size: 15px;
   }
 
 #header p {
@@ -91,8 +88,8 @@ body.admin-menu #wrapper {
 
 
 #header {
-  width: 180px;
-  padding-left: 22px;
+  width: 166px;
+  padding: 0 18px;
   float: left;
   }
 
@@ -126,6 +123,8 @@ body.admin-menu #wrapper {
   clear:none;
   padding-left:164px;
   padding-right: 230px;
+  padding-bottom: 50px;
+  position:relative;
   }
 
 #content-main {
@@ -166,8 +165,7 @@ p.copy a.poweredby {
   }
 
 #scholar-shield {
-  margin: 12px 0 0 0;
-  text-align: left;
+  width:65px;
   }
 
 /* SIDEBAR LEFT */
@@ -193,7 +191,6 @@ p.copy a.poweredby {
 #block-vsite_menus-0 ul.menu li a {
   display:block;
   height: 36px;
-  font-size: 16px;
   line-height: 36px;
   color: #03263f;
   padding-left: 16px;
