--- a/sites/all/themes/openscholar/scholar_redhead/scholar-redhead.css
+++ b/sites/all/themes/openscholar/scholar_redhead/scholar-redhead.css
@@ -4,6 +4,7 @@ html {
 
 body {
     color:#353535;
+    font-family: "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
     }
 
 #wrapper {
@@ -15,10 +16,34 @@ body {
     margin: 0 auto;
     }
 
+a, a:visited {
+    color:#8A281B;
+    }
+
+a:hover {
+    color:#8A281B;
+    text-decoration: underline;
+    }
+
 
 h1, h2, h3, #sidebar-second a {
+    font-weight: normal;
     color:#889095;
     }
+
+h1, h2 {
+    font-size: 1.4em;
+    }
+
+
+h2, h3, h4 {
+  margin-bottom: 1em;
+  margin-top: 1em;
+  }
+
+h2.title {
+  margin-bottom: 1em;
+  }
 
 h1 a, h2 a, h3 a, #sidebar-second a {
     font-style: normal;
@@ -72,6 +97,16 @@ body.sidebar-first #content-wrapper, body.header-left-main #header-wrapper {
 
 #header-wrapper {
     height: 165px;
+    }
+
+#header h1 {
+    font-size: 24px;
+    line-height: 1.1em;
+    }
+
+#header h2 {
+    font-size: 18px;
+     line-height: 1.3em;
     }
 
 #header h1, #header h2, #header h3, #header a, #header a:visited, #header h1 a, #header h1 a:visited {
