changing openscholar theme name to avoid conflicts

--- a/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
+++ b/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
@@ -78,7 +78,7 @@ body.no-sidebars #content-wrapper {
   width: 980px;
   }
 
-body.sidebar-right #content-wrapper {
+body.sidebar-second #content-wrapper {
   padding-left: 30px;
   }
 
@@ -405,7 +405,7 @@ row {
   font-size: 18px;
   line-height: 1.3em;
   color: #555;
-  padding:12px 12px 14px 33px;
+  padding:19px 12px 14px 33px;
   margin: 0;
   letter-spacing: -.5px;
   }
@@ -620,12 +620,13 @@ td, td.description {
 
 
 #block-views-openscholar_sites-block_2 ul {
-  padding-top: 12px;
+  padding-top: 22px;
   width: 860px;
   margin: 0 0 0 85px;
   }
 
-#block-views-openscholar_sites-block_2, #footer {
+#block-views-openscholar_sites-block_2,
+#footer {
   position:relative;
   }
 
