--- a/sites/all/themes/openscholar/scholar_base/css/dropdown.css
+++ b/sites/all/themes/openscholar/scholar_base/css/dropdown.css
@@ -72,7 +72,7 @@ html.js div.ctools-dropdown div.ctools-dropdown-container {
 .section-cp div.ctools-dropdown {
   margin: 0;
   float:right;
-  background: url(../images/plus.png) no-repeat 6px 6px #eaf7e7 !important;
+  background: url('../images/scholarbase-sprite.png') no-repeat 6px -385px #eaf7e7 !important;
   padding: 1px 10px 2px 22px !important;
   }
 
@@ -139,7 +139,7 @@ html.js div.ctools-dropdown div.ctools-dropdown-container {
   }
 
 .node .vsite-admin a.ctools-dropdown-link {
-  background: url('../images/admin-link.png') 0 4px no-repeat transparent;
+  background: url('../images/scholarbase-sprite.png') 0 -94px no-repeat transparent;
   padding: 1px 0 10px 20px !important;
   height: 16px;
   }
@@ -154,7 +154,7 @@ html.js div.ctools-dropdown div.ctools-dropdown-container {
   }
 
 .node:hover .vsite-admin a.ctools-dropdown-link {
-  background-position: 0 -25px;
+  background-position: 0 -123px;
   }
 
 .empty-content .item-list ul.context-links li {
