--- a/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
+++ b/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
@@ -461,7 +461,8 @@ row {
   margin: 1em 0 1.5em 49px;
   }
 
-#activity-toggle a, #activity-toggle a:visited {
+#activity-toggle a,
+#activity-toggle a:visited {
   background: url(images/pointer-prev.png) no-repeat 0 50%;
   padding-left: 26px;
   font-weight:bold;
@@ -696,6 +697,10 @@ td, td.description {
   height: auto;
   padding: 0;
   margin:0;
+  }
+
+#block-views-openscholar_sites-block_2 .more-link a:after {
+  content: '';
   }
 
 #block-views-openscholar_sites-block_2 .more-link a {
