--- a/sites/all/themes/openscholar/openscholar_default/css/openscholar_default.css
+++ b/sites/all/themes/openscholar/openscholar_default/css/openscholar_default.css
@@ -5,7 +5,7 @@ body {
     }
 
 #wrapper {
-  margin-top: 42px;
+  margin-top: 22px;
   }
 
 #container,
@@ -30,8 +30,9 @@ body {
  -webkit-border-radius: 6px;
  }
 
-body.no-sidebars #content-main,
-.front #content-bottom {
+body.front #header-main,
+body.front #content-main,
+body.front #content-bottom {
   padding: 0;
   }
 
@@ -48,15 +49,23 @@ a:hover {
   font-weight:normal;
   font-size: 26px;
   line-height: 44px;
-  margin-left: 30px;
   float:left;
   }
 
-#header h1 a, #header h1 a:visited {
+.front #header h1 {
+  margin-left: 30px;
+
+  }
+
+#header h1 a,
+#header h1 a:visited {
   color: #313030;
   }
 
-h2, h3, #sidebar-first a, #header {
+h2,
+h3,
+#sidebar-first a,
+#header {
   font-weight: bold;
   }
 
@@ -77,16 +86,15 @@ div.form-item {
 /*HEADER */
 
 #header {
-  min-height: 70px;
+  min-height: 56px;
   }
-
 
 #block-openscholar_front-top_links .content {
   float:right;
   }
 
 #block-openscholar_front-top_links a {
-  background:url(../images/get-your-site-button.png) no-repeat;
+  background:url('../images/get-your-site-button.png') no-repeat;
   text-align: center;
   line-height: 38px;
   display: block;
@@ -187,7 +195,7 @@ td, td.description {
   }
 
 .block-search .content {
-  background:url("images/search.png") no-repeat scroll 100% 0 transparent;
+  background:url('../images/search.png') no-repeat scroll 100% 0 transparent;
   float:right;
   height:32px;
   margin:37px 0 0;
@@ -234,7 +242,9 @@ td, td.description {
   float: right;
   }
 
-p.single, ul.single, ul.single li {
+p.single,
+ul.single,
+ul.single li {
   display:inline;
   }
 
@@ -268,7 +278,7 @@ html[xmlns] #content-bottom:after {
   }
 
 #block-views-openscholar_sites-block_2 h3 {
-  background: url(../images/featured.png) 0 0 no-repeat transparent;
+  background: url('../images/featured.png') 0 0 no-repeat transparent;
   text-indent: -999em;
   width:70px;
   height: 64px;
@@ -339,12 +349,13 @@ html[xmlns] #content-bottom:after {
   }
 
 #block-views-openscholar_sites-block_2 .more-link a {
-  background: url(images/black-arrow-right.png) no-repeat 100% 50% #fff;
+  background: url('../images/arrow-black.png') no-repeat 100% 50% #fff;
   padding-right: 11px;
   color: #000;
   text-transform: capitalize;
   font-weight: bold;
   margin-right: 30px;
+  font-size:11px;
   }
 
 a.imagecache-openscholar_front_logo {
