--- a/sites/all/themes/openscholar/scholar_base/css/toggle-slider.css
+++ b/sites/all/themes/openscholar/scholar_base/css/toggle-slider.css
@@ -18,87 +18,96 @@
   }
 
 .toggle {
-  background: url(../images/show-menu.png) 100% .2em no-repeat transparent;
+  background: url('../images/scholarbase-sprite.png') 101% -192px no-repeat transparent;
   padding-right: 15px;
   }
 
 .toggle.expanded {
   background-color:#eef3fb;
-  background-position: 100% -17px;
+  background-position: 101% -211px;
   }
-
 
 .slider ul.links li {
   display:block;
   }
 
-
 /* WELCOME MESSAGE SPECIFIC */
 
 #message_welcome_message {
   margin-bottom: 1em;
-  clear:left;
-  padding-top: 9px;
+  position: static;
   }
 
+#message_welcome_message .toggle,
+#message_welcome_message .slider {
+  background-color: #eaf7e7;
+  border:1px solid #c5d4c2;
+  }
 
 #message_welcome_message .toggle {
   margin: 0;
-  padding: 4px 23px 4px 10px;
+  padding: 3px 23px 3px 10px;
   cursor: pointer;
-  border: 1px solid #c0c5cc;
   color: #444;
-  background-color:#eef3fb;
-  background-position: 99% 10px;
-  }
-
-#message_welcome_message .expanded {
-  background-position: 98% -9px;
-  border-bottom: none;
-  }
-
-/* "Hide this message" */
-
-#message_welcome_message .vsite-admin {
-  margin-top: 1em;
-  text-align:right;
-  position: relative;
-  }
-
-#message_welcome_message .vsite-admin .toggle {
-  border: none;
   }
 
 #message_welcome_message .slider {
-  font-weight: bold;
+  padding: 10px;
+  margin-top: 5px;
   }
+
+#message_welcome_message .expanded {
+  background-position: 101% -211px;
+  border-bottom: none;
+  padding-bottom: 8px;
+  }
+
+/* "Hide this message" */
+#message_welcome_message .vsite-admin {
+  text-align:right;
+  position: relative;
+  padding-bottom:20px;
+  }
+
+#message_welcome_message .vsite-admin .toggle {
+  padding: 0;
+  border: none;
+  background-image: none;
+  font-size: 11px;
+  }
+
 
 #message_welcome_message .vsite-admin .slider {
   position: absolute;
   top: 18px;
-  right: 15px;
+  right: 1px;
   left: auto;
-  border: none;
+  border-top: none;
   padding: 0;
-  width: 107px;
+  width: 93px;
+  border: none;
+  }
+
+#message_welcome_message .slider a,
+#message_welcome_message .vsite-admin .toggle {
+  color: #005C9C;
+  text-decoration:underline;
+  font-weight: normal;
+  font-size:11px;
+  }
+
+#message_welcome_message .vsite-admin .expanded {
+  text-decoration: none;
   }
 
 #message_welcome_message .vsite-admin .slider ul.links li {
   display:inline;
   float: left;
-  }
-
-#message_welcome_message .vsite-admin .slider ul.links li a {
-  font-weight: bold;
+  padding:0;
   }
 
 #message_welcome_message .vsite-admin .slider ul.links li.first {
-  padding-right: 5px;
-  margin-right: 5px;
-  }
-
-#message_welcome_message h3, #message_welcome_message p {
-  margin: 1em 0;
+  margin-right: 10px;
   }
 
 #resource-list li {
