--- a/sites/all/themes/openscholar/scholar_nortony/scholar-nortony.css
+++ b/sites/all/themes/openscholar/scholar_nortony/scholar-nortony.css
@@ -4,22 +4,27 @@
 	src: local('fonts/Goudy Trajan Regular'), local('fonts/GoudyTrajan-Regular'), url('fonts/GoudyTrajan-Regular.woff') format('woff'), url('fonts/GoudyTrajan-Regular.otf') format('opentype'), url('fonts/GoudyTrajan-Regular.svg#GoudyTrajan-Regular') format('svg');
   }
 
-body, #header, #footer, #wrapper {
-    background: #2f341f;
-    color:#37352B;
-    font-family: georgia, serif;
-    }
+body,
+#header,
+#footer,
+#wrapper {
+  background: #2f341f;
+  color:#37352B;
+  font-family: georgia, serif;
+  }
 
-/* TYPOGRAPHY*/
+.sidebar {
+  color: #ddd;
+  }
 
 a, a:visited {
-    color:#a3a18c;
-    text-decoration: none;
-    }
+  color:#a3a18c;
+  text-decoration: none;
+  }
 
 a:hover {
-    text-decoration: underline;
-    }
+  text-decoration: underline;
+  }
 
 h2, h3, h4 {
   margin-bottom: 0;
@@ -41,7 +46,9 @@ h2.title {
   color: #999;
   }
 
-#sidebar-second h3.title, #sidebar-first h3.title, #sidebar-first #block-vsite_menus-0 li a {
+#sidebar-second h3.title,
+#sidebar-first h3.title,
+#sidebar-first #block-vsite_menus-0 li a {
   color: #50cae9;
   font: 13px/normal "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
   font-weight: normal;
@@ -50,7 +57,8 @@ h2.title {
   border-bottom:1px solid #c6c7c2;
   }
 
-#sidebar-second li a, #sidebar-first li a {
+#sidebar-second li a,
+#sidebar-first li a {
   color: #bbb;
   font-weight:normal;
   }
@@ -59,16 +67,13 @@ p.copy {
   margin-top: 0;
   }
 
-
 /* LAYOUT ELEMENTS */
 
 #container {
   width: 938px;
   margin: 0 auto;
-  padding-top: 1px;
   background: url(images/container.png) repeat-y 0 0 #fff;
   }
-
 
 #sidebar-first, #sidebar-second {
   font-size: .8em;
@@ -113,12 +118,16 @@ p.copy a.poweredby {
 
 /* SIDEBAR ELEMENTS */
 
-#sidebar-second, #sidebar-first {
+#sidebar-second,
+#sidebar-first {
   font-size: 13px;
   line-height: 1.2em;
   }
 
-#sidebar-second a, #sidebar-second a:visited, #sidebar-first a, #sidebar-first a:visited {
+#sidebar-second a,
+#sidebar-second a:visited,
+#sidebar-first a,
+#sidebar-first a:visited {
   color: #e3dfdf;
   }
 
@@ -136,14 +145,15 @@ p.copy a.poweredby {
   padding-bottom:5px;
   }
 
-body.header-main #header-wrapper, body.header-main-right #header-wrapper {
+body.header-main #header-wrapper,
+body.header-main-right #header-wrapper {
   padding-right:298px;
   }
 
-body.header-main #header-main, body.header-main-right #header-main {
+body.header-main #header-main,
+body.header-main-right #header-main {
   padding-left: 22px;
   }
-
 
 #block-scholar-1 {
   display:table-cell;
@@ -192,7 +202,8 @@ body.header-main #header-main, body.header-main-right #header-main {
     line-height: 48px;
     }
 
-#navbar #block-vsite_menus-0 li a, #navbar #block-vsite_menus-0 li a:visited {
+#navbar #block-vsite_menus-0 li a,
+#navbar #block-vsite_menus-0 li a:visited {
   line-height: 25px;
   text-transform:uppercase;
   color: #fff;
@@ -207,12 +218,16 @@ body.header-main #header-main, body.header-main-right #header-main {
   padding-left: 22px;
   }
 
-#navbar #block-vsite_menus-0 li a:active, #navbar #block-vsite_menus-0 li a:hover, #navbar #block-vsite_menus-0 li a.active, #navbar #block-vsite_menus-0 li.active-trail a {
+#navbar #block-vsite_menus-0 li a:active,
+#navbar #block-vsite_menus-0 li a:hover,
+#navbar #block-vsite_menus-0 li a.active,
+#navbar #block-vsite_menus-0 li.active-trail a {
   background: url(images/navbar.png) 0 -48px repeat-x transparent;
   text-decoration:none;
   }
 
-#sidebar-first #block-vsite_menus-0 li a, #sidebar-first #block-vsite_menus-0 li a:visited {
+#sidebar-first #block-vsite_menus-0 li a,
+#sidebar-first #block-vsite_menus-0 li a:visited {
   color: #7e9f06;
   border: none;
   display:block;
@@ -236,10 +251,6 @@ body.header-main #header-main, body.header-main-right #header-main {
   }
 
 /* MAIN CONTENT AREA */
-
-
-
-/* Nodes */
 
 .submitted {
   color: #a1b1b1;
